--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Contador</title>
+    <title>TO-DO List</title>
 </head>
 <body>
-   
-
+    <h1>TO-DO lIST</h1>
+    <div id="list">
+        <form id="task-form">
+            <input id="task-input" name="tarefa" type="text" placeholder="Digite aqui sua tarefa" />
+            <button type="submit">Adicionar</button>  
+        </form>
+        <div id="tasks"></div>
+    </div>
 </body>
 <script src="assets/js/scripts.js"></script>
 </html>
